@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/errata,v 1.2 1996/05/30 22:14:03 niklas Exp $
 # $NetBSD: errata,v 1.2 1996/05/15 19:47:33 is Exp $
 #
 
