@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/fplsp.doc,v 1.2 1996/05/30 22:14:06 niklas Exp $
 # $NetBSD: fplsp.doc,v 1.2 1996/05/15 19:47:35 is Exp $
 #
 
