@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/fpsp.doc,v 1.2 1996/05/30 22:14:16 niklas Exp $
 # $NetBSD: fpsp.doc,v 1.2 1996/05/15 19:47:51 is Exp $
 #
 
