@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/fpsp.sa,v 1.2 1996/05/30 22:14:29 niklas Exp $
 # $NetBSD: fpsp.sa,v 1.2 1996/05/15 19:48:25 is Exp $
 #
 
