@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/ftest.sa,v 1.2 1996/05/30 22:14:35 niklas Exp $
 # $NetBSD: ftest.sa,v 1.2 1996/05/15 19:48:34 is Exp $
 #
 
