@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/ilsp.s,v 1.2 1996/05/30 22:14:39 niklas Exp $
 # $NetBSD: ilsp.s,v 1.2 1996/05/15 19:48:37 is Exp $
 #
 
