@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/ilsp.sa,v 1.2 1996/05/30 22:14:40 niklas Exp $
 # $NetBSD: ilsp.sa,v 1.2 1996/05/15 19:48:39 is Exp $
 #
 
