@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/iskeletn.s,v 1.2 1996/05/30 22:14:43 niklas Exp $
 # $NetBSD: iskeletn.s,v 1.2 1996/05/15 19:48:41 is Exp $
 #
 
