@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/isp.doc,v 1.2 1996/05/30 22:14:45 niklas Exp $
 # $NetBSD: isp.doc,v 1.2 1996/05/15 19:48:44 is Exp $
 #
 
