@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/isp.sa,v 1.2 1996/05/30 22:14:51 niklas Exp $
 # $NetBSD: isp.sa,v 1.2 1996/05/15 19:48:51 is Exp $
 #
 
