@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/netbsd.S,v 1.2 1996/05/30 22:15:02 niklas Exp $
 # $NetBSD: netbsd.S,v 1.1 1996/05/15 21:06:24 is Exp $
 #
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
