@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/pfpsp.sa,v 1.2 1996/05/30 22:15:14 niklas Exp $
 # $NetBSD: pfpsp.sa,v 1.2 1996/05/15 19:49:26 is Exp $
 #
 
