@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/readme,v 1.2 1996/05/30 22:15:16 niklas Exp $
 # $NetBSD: readme,v 1.2 1996/05/15 19:49:35 is Exp $
 #
 
