@@ -1,4 +1,5 @@
 #
+# $OpenBSD: src/sys/arch/m68k/060sp/changes,v 1.2 1996/05/30 22:13:59 niklas Exp $
 # $NetBSD: changes,v 1.2 1996/05/15 19:47:31 is Exp $
 #
 
